--- a/index.html
+++ b/index.html
@@ -5,8 +5,122 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="page-header">
+      <a href="#" class="logo-sedona">
+        <img src="./img/logo.svg"class="logo-link" alt="Логотип сайта о Седоне">
+      </a>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">О Седоне</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a href="#" class="menu-link">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">
+              <span class="visually-Hidden">Избранное</span>12</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Неофициальный сайт города Седоны</h1>
+      <section class="welcome">
+        <h2 class="visually-hidden">Приглашение посетить Седону</h2>
+        <img src="./img/welcome.svg"class="welcome-img" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+        <p class="welcome-text">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Пять причин посетить Седону</h2>
+        <dl class="advantages-list">
+          <dt class="advantages-item-1">Настоящий городок</dt>
+          <dd class="advantages-item-2">Седона — не аттракцион для туристов, там течёт своя жизнь</dd>
+          <dd class="advantages-item-3"><img src="./files/street.jpg"class="advantages-img" alt="Одна из улиц Седоны"></dd>
+          <dt class="advantages-item-1">Небольшая площадь</dt>
+          <dd class="advantages-item-2">Все достопримечательности находятся очень близко</dd>
+          <dt class="advantages-item-1">Красивая дорога</dt>
+          <dd class="advantages-item-2">Ехать в Седону из Лас-Вегаса совсем не скучно!</dd>
+          <dt class="advantages-item-1">Мало туристов</dt>
+          <dd class="advantages-item-2">Большинство едет в Гранд Каньон и толпится там</dd>
+          <dt class="advantages-item-1">Там есть мост Дьявола</dt>
+          <dd class="advantages-item-2">Да, по нему можно пройти! Если вы осмелитесь, разумеется</dd>
+          <dd class="advantages-item-3"><img src="./files/devils-bridge.jpg"class="advantages-img" alt="Фото моста Дьявола"></dd>
+        </dl>
+      </section>
+      <section class="relax">
+        <h2 class="visually-hidden">Отдых в Седоне</h2>
+        <p class="relax-text-1">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="relax-text-1">Опытный персонал и качественное обслуживание!</p>
+        <dl class="relax-list">
+          <dt class="relax-item-1">Жильё</dt>
+          <dd class="relax-item-2">Рекомендуем пожить в настоящем мотеле, всё как в кино!</dd>
+          <dt class="relax-item-1">Еда</dt>
+          <dd class="relax-item-2">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</dd>
+          <dt class="relax-item-1">Сувениры</dt>
+          <dd class="relax-item-2">Не только китайского, но и настоящего местного производства!</dd>
+        </dl>
+      </section>
+      <section class="reserv">
+        <h2 class="visually-hidden">Бронирование гостинцы в Седоне</h2>
+        <p class="reserv-text-1">Заинтересовались?</p>
+        <p class="reserv-text-1">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="#" class="reserv-link">Поиск гостинцы в Седоне</a>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="subscription-index">
+        <h2 class="visually-hidden">Подписка на рассылку</h2>
+        <p class="subs-text-1">Подпишитесь на рассылку</p>
+        <p class="subs-text-2">Только полезная информация и никакого спама, честное бойскатутское!</p>
+        <form action="https://echo.htmlacademy.ru/" class="subs-form" method="post">
+          <input type="email" placeholder="Ваш e-mail">
+          <input type="submit" value="Подписаться">
+        </form>
+      </section>
+      <section class="subscription-index">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="media">
+          <li class="media-item">
+            <a href="https://vk.com/htmlacademy" class="media-link">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="media-item">
+            <a href="https://t.me/htmlacademy" class="media-link">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="media-item">
+            <a href="https://www.youtube.com/user/htmlacademyru" class="media-link">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+        <a href="+78128121212" class="phone">+7 (812) 812-12-12</a>
+      </section>
+      <section class="">
+        <h2 class="visually-hidden">Логотип сайта HTML Academy</h2>
+        <a href="https://htmlacademy.ru/intensive/htmlcss" class="htmla-link">
+          <img src="./img/logo_htmlacademy.svg"class="htmla-logo" alt="Логотип HTML Academy">
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
