--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav class="header-nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="#" class="nav-link nav-link-active">Главная</a>
+              <a class="nav-link nav-link-active">Главная</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">О Седоне</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Гостиницы</a>
+              <a href="./catalog.html" class="nav-link">Гостиницы</a>
             </li>
           </ul>
           <ul class="menu-list">
@@ -120,13 +120,13 @@
           <h2 class="reserv-head">Заинтересовались?</h2>
           <p class="reserv-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
             Седоне</p>
-          <a href="#" class="reserv-link">Поиск гостинцы в Седоне</a>
+          <a href="#" class="reserv-link">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
       </main>
       <footer class="page-footer">
-        <section class="subscription subscription-index">
-          <h2 class="subscription-head">Подпишитесь на рассылку</h2>
-          <p class="subscription-text">Только полезная информация и никакого спама, честное бойскатутское!</p>
+        <section class="subscription">
+          <h2 class="subscription-head head-color">Подпишитесь на рассылку</h2>
+          <p class="subscription-text text-color">Только полезная информация и никакого спама, честное бойскатутское!</p>
           <form action="https://echo.htmlacademy.ru/" class="subs-form" method="post">
             <input class="subscription-input" type="email" placeholder="Ваш e-mail" required>
             <button class="subscription-button" type="submit">Подписаться</button>
