Модальное окно + прочее по мелочи

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link type="image/x-icon" rel="icon" href="./img/favicon.png">
   </head>
 
   <body>
@@ -89,15 +90,15 @@
               <legend class="filters-legend">Тип Жилья:</legend>
               <ul class="radio-list">
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="hotel" name="hotel" checked />
+                  <input type="radio" class="radio-input" id="hotel" name="type" value="hotel" checked />
                   <label for="hotel" class="radio-label">Гостиница</label>
                 </li>
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="motel" name="motel" />
+                  <input type="radio" class="radio-input" id="motel" name="type" value="motel" />
                   <label for="motel" class="radio-label">Мотель</label>
                 </li>
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="appartment" name="appartment" />
+                  <input type="radio" class="radio-input" id="appartment" name="type" value="appartment" />
                   <label for="appartment" class="radio-label">Апартаменты</label>
                 </li>
               </ul>
