Исправления после валидатора + причёсывание кода

--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <link type="image/x-icon" rel="icon" href="./img/favicon.png">
@@ -73,15 +73,15 @@
               <legend class="filters-legend">Инфраструктура:</legend>
               <ul class="checkbox-list">
                 <li class="checkbox-item">
-                  <input class="checkbox-input" type="checkbox" id="pool" name="pool" checked />
+                  <input class="checkbox-input" type="checkbox" id="pool" name="pool" checked>
                   <label for="pool" class="checkbox-label">Бассейн</label>
                 </li>
                 <li class="checkbox-item">
-                  <input class="checkbox-input" type="checkbox" id="parking" name="parking" checked />
+                  <input class="checkbox-input" type="checkbox" id="parking" name="parking" checked>
                   <label for="parking" class="checkbox-label">Парковка</label>
                 </li>
                 <li class="checkbox-item">
-                  <input type="checkbox" class="checkbox-input" id="wifi" name="wifi" />
+                  <input type="checkbox" class="checkbox-input" id="wifi" name="wifi">
                   <label for="wifi" class="checkbox-label">Wi-Fi</label>
                 </li>
               </ul>
@@ -90,15 +90,15 @@
               <legend class="filters-legend">Тип Жилья:</legend>
               <ul class="radio-list">
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="hotel" name="type" value="hotel" checked />
+                  <input type="radio" class="radio-input" id="hotel" name="type" value="hotel" checked>
                   <label for="hotel" class="radio-label">Гостиница</label>
                 </li>
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="motel" name="type" value="motel" />
+                  <input type="radio" class="radio-input" id="motel" name="type" value="motel">
                   <label for="motel" class="radio-label">Мотель</label>
                 </li>
                 <li class="radio-item">
-                  <input type="radio" class="radio-input" id="appartment" name="type" value="appartment" />
+                  <input type="radio" class="radio-input" id="appartment" name="type" value="appartment">
                   <label for="appartment" class="radio-label">Апартаменты</label>
                 </li>
               </ul>
