--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         <h1 class="visually-hidden">Неофициальный сайт города Седоны</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Приглашение посетить Седону</h2>
-          <img src="./img/welcome.svg" class="welcome-img"
-            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+          <img src="./img/welcome.svg" class="welcome-img" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </section>
         <section class="advantages">
           <div class="advantages-wrapper">
@@ -88,8 +87,7 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item item-pic">
-              <img src="./img/devils-bridge.jpg" class="advantages-pic" width="800px" height="385px"
-                Salt="Фото моста Дьявола">
+              <img src="./img/devils-bridge.jpg" class="advantages-pic" width="800" height="385" alt="Фото моста Дьявола">
               <div class="advantages-container">
                 <h3 class="advantages-definition after-white">Там есть мост Дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -270,7 +268,7 @@
             <label for="children" class="modal-text child-label">Дети:</label>
             <button class="child-info" type="button">
               <span class="visually-hidden">Информация о размещении детей</span>
-            <p class="child-info-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</p>
+            <span class="child-info-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
             </button>
           </div>
           <div class="number-wrapper child-number">
