--- a/catalog.html
+++ b/catalog.html
@@ -243,7 +243,7 @@
       <footer class="page-footer">
         <section class="subscription subscription-catalog">
           <h2 class="subscription-head">Подпишитесь на рассылку</h2>
-          <p class="subscription-text">Только полезная информация и никакого спама, честное бойскатутское!</p>
+          <p class="subscription-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form action="https://echo.htmlacademy.ru/" class="subs-form" method="post">
             <input class="subscription-input" type="email" placeholder="Ваш e-mail" required>
             <button class="subscription-button" type="submit">Подписаться</button>
