--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <h1 class="visually-hidden">Неофициальный сайт города Седоны</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Приглашение посетить Седону</h2>
-          <img src="./img/welcome.svg" class="welcome-img" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+          <img src="./img/welcome.svg" class="welcome-img"
+            alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </section>
         <section class="advantages">
           <div class="advantages-wrapper">
@@ -87,7 +88,8 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item item-pic">
-              <img src="./img/devils-bridge.jpg" class="advantages-pic" width="800" height="385" alt="Фото моста Дьявола">
+              <img src="./img/devils-bridge.jpg" class="advantages-pic" width="800" height="385"
+                alt="Фото моста Дьявола">
               <div class="advantages-container">
                 <h3 class="advantages-definition after-white">Там есть мост Дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -125,7 +127,7 @@
       <footer class="page-footer">
         <section class="subscription">
           <h2 class="subscription-head head-color">Подпишитесь на рассылку</h2>
-          <p class="subscription-text text-color">Только полезная информация и никакого спама, честное бойскатутское!
+          <p class="subscription-text text-color">Только полезная информация и никакого спама, честное бойскаутское!
           </p>
           <form action="https://echo.htmlacademy.ru/" class="subs-form" method="post">
             <input class="subscription-input" type="email" placeholder="Ваш e-mail" required>
@@ -175,53 +177,55 @@
               +7 (812) 812-12-12
             </a>
           </div>
-          <a href="https://htmlacademy.ru/intensive/htmlcss" class="academy-link">
-            <span class="visually-hidden">Логотип сайта HTML Academy</span>
-            <svg class="logo-academy" role="img" width="115" height="34" viewBox="0 0 115 34" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_33515_1190)">
-                <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" fill="currentColor" />
-                <path
-                  d="M11.6 4.85645C10 4.85645 8.8 5.55645 8 6.55645H7.9V0.356445H5.9V15.8564H7.9V10.5564C7.9 8.45645 9.2 6.95645 11.2 6.95645C13 6.95645 14.1 8.35645 14.1 10.1564V15.8564H16.1V9.75644C16.2 6.75644 14.3 4.85645 11.6 4.85645Z"
-                  fill="currentColor" />
-                <path
-                  d="M26.6 5.15645H21.8V1.45645H19.8V5.25645H17.9V7.25645H19.8V13.2564C19.8 14.9564 20.8 15.9564 22.5 15.9564H26.6V13.9564H22.9C22.2 13.9564 21.8 13.5564 21.8 12.8564V7.15645H26.6V5.15645Z"
-                  fill="currentColor" />
-                <path
-                  d="M41.1 4.95645C39.5 4.95645 38.2 5.75644 37.6 7.05645H37.5C36.9 5.85645 35.7 4.95645 34.1 4.95645C32.7 4.95645 31.6 5.75645 31 6.75645H30.9V5.15645H29V15.7564H31V10.3564C31 8.35645 32 6.85645 33.6 6.85645C35.1 6.85645 36 7.85645 36 9.45645V15.7564H38V10.1564C38 7.75645 39.4 6.85645 40.6 6.85645C42.1 6.85645 43 7.85645 43 9.45645V15.7564H45V9.25644C45.1 6.75644 43.6 4.95645 41.1 4.95645Z"
-                  fill="currentColor" />
-                <path
-                  d="M47.8 13.0564C47.8 14.7564 48.8 15.7564 50.6 15.7564H52.6V13.7564H50.9C50.2 13.7564 49.8 13.3564 49.8 12.6564V0.356445H47.8V13.0564Z"
-                  fill="currentColor" />
-                <path
-                  d="M28.9 20.0564C28 18.9564 26.7 18.2564 25 18.2564C21.9 18.2564 19.6 20.5564 19.6 23.8564C19.6 27.1564 21.9 29.4564 25 29.4564C26.8 29.4564 28 28.6564 28.8 27.5564H28.9V29.1564H30.9V18.5564H28.9V20.0564ZM25.3 27.4564C23.1 27.4564 21.7 25.8564 21.7 23.8564C21.7 21.8564 23.1 20.2564 25.3 20.2564C27.5 20.2564 28.9 21.8564 28.9 23.8564C28.9 25.7564 27.5 27.4564 25.3 27.4564Z"
-                  fill="currentColor" />
-                <path
-                  d="M44.2 22.3564C43.7 19.9564 41.6 18.2564 38.8 18.2564C35.4 18.2564 33.2 20.7564 33.2 23.8564C33.2 26.9564 35.4 29.4564 38.8 29.4564C41.6 29.4564 43.7 27.6564 44.2 25.2564H42.1C41.7 26.5564 40.4 27.5564 38.8 27.5564C36.6 27.5564 35.2 25.9564 35.2 23.9564C35.2 21.9564 36.6 20.3564 38.8 20.3564C40.4 20.3564 41.6 21.3564 42.1 22.5564H44.2V22.3564Z"
-                  fill="currentColor" />
-                <path
-                  d="M55.1 20.0564C54.2 18.9564 52.9 18.2564 51.2 18.2564C48.1 18.2564 45.8 20.5564 45.8 23.8564C45.8 27.1564 48.1 29.4564 51.2 29.4564C53 29.4564 54.2 28.6564 55 27.5564H55.1V29.1564H57.1V18.5564H55.1V20.0564ZM51.5 27.4564C49.3 27.4564 47.9 25.8564 47.9 23.8564C47.9 21.8564 49.3 20.2564 51.5 20.2564C53.7 20.2564 55.1 21.8564 55.1 23.8564C55.1 25.7564 53.6 27.4564 51.5 27.4564Z"
-                  fill="currentColor" />
-                <path
-                  d="M68.7 20.1564C67.8 19.0564 66.5 18.2564 64.8 18.2564C61.7 18.2564 59.4 20.5564 59.4 23.8564C59.4 27.1564 61.6 29.4564 64.8 29.4564C66.5 29.4564 67.8 28.6564 68.6 27.6564H68.7V29.1564H70.7V13.7564H68.7V20.1564ZM65.1 27.4564C62.9 27.4564 61.5 25.8564 61.5 23.8564C61.5 21.8564 62.9 20.2564 65.1 20.2564C67.3 20.2564 68.7 21.8564 68.7 23.8564C68.6 25.8564 67.2 27.4564 65.1 27.4564Z"
-                  fill="currentColor" />
-                <path
-                  d="M78.3 18.2564C75 18.2564 72.8 20.7564 72.8 23.8564C72.8 26.8564 74.9 29.4564 78.3 29.4564C80.8 29.4564 82.8 28.1564 83.5 25.8564H81.4C80.9 26.8564 79.8 27.4564 78.4 27.4564C76.5 27.4564 75.1 26.1564 75 24.5564H83.8C84 20.9564 81.8 18.2564 78.3 18.2564ZM78.3 20.1564C80 20.1564 81.3 21.1564 81.6 22.7564H75.1C75.4 21.2564 76.6 20.1564 78.3 20.1564Z"
-                  fill="currentColor" />
-                <path
-                  d="M98.2 18.2564C96.6 18.2564 95.3 19.0564 94.6 20.2564H94.5C93.9 19.0564 92.7 18.2564 91.1 18.2564C89.7 18.2564 88.6 18.9564 88 20.0564V18.5564H86.1V29.1564H88.1V23.7564C88.1 21.7564 89.1 20.3564 90.7 20.2564C92.2 20.2564 93.1 21.2564 93.1 22.8564V29.1564H95.1V23.5564C95.1 21.1564 96.5 20.2564 97.7 20.2564C99.2 20.2564 100.1 21.2564 100.1 22.8564V29.1564H102.1V22.6564C102.2 20.0564 100.7 18.2564 98.2 18.2564Z"
-                  fill="currentColor" />
-                <path
-                  d="M109.4 27.3564L105.8 18.4564H103.6L108.4 30.0564C108.1 30.9564 107.7 31.2564 106.7 31.2564H104.2V33.2564H106.7C108.5 33.2564 109.5 32.4564 110.2 30.6564L114.9 18.4564H112.8L109.4 27.3564Z"
-                  fill="currentColor" />
-              </g>
-              <defs>
-                <clipPath id="clip0_33515_1190">
-                  <rect width="115" height="33" fill="white" transform="translate(0 0.356445)" />
-                </clipPath>
-              </defs>
-            </svg>
-          </a>
+          <div class="academy-wrapper">
+            <a href="https://htmlacademy.ru/intensive/htmlcss" class="academy-link">
+              <span class="visually-hidden">Логотип сайта HTML Academy</span>
+              <svg class="logo-academy" role="img" width="115" height="34" viewBox="0 0 115 34" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_33515_1190)">
+                  <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" fill="currentColor" />
+                  <path
+                    d="M11.6 4.85645C10 4.85645 8.8 5.55645 8 6.55645H7.9V0.356445H5.9V15.8564H7.9V10.5564C7.9 8.45645 9.2 6.95645 11.2 6.95645C13 6.95645 14.1 8.35645 14.1 10.1564V15.8564H16.1V9.75644C16.2 6.75644 14.3 4.85645 11.6 4.85645Z"
+                    fill="currentColor" />
+                  <path
+                    d="M26.6 5.15645H21.8V1.45645H19.8V5.25645H17.9V7.25645H19.8V13.2564C19.8 14.9564 20.8 15.9564 22.5 15.9564H26.6V13.9564H22.9C22.2 13.9564 21.8 13.5564 21.8 12.8564V7.15645H26.6V5.15645Z"
+                    fill="currentColor" />
+                  <path
+                    d="M41.1 4.95645C39.5 4.95645 38.2 5.75644 37.6 7.05645H37.5C36.9 5.85645 35.7 4.95645 34.1 4.95645C32.7 4.95645 31.6 5.75645 31 6.75645H30.9V5.15645H29V15.7564H31V10.3564C31 8.35645 32 6.85645 33.6 6.85645C35.1 6.85645 36 7.85645 36 9.45645V15.7564H38V10.1564C38 7.75645 39.4 6.85645 40.6 6.85645C42.1 6.85645 43 7.85645 43 9.45645V15.7564H45V9.25644C45.1 6.75644 43.6 4.95645 41.1 4.95645Z"
+                    fill="currentColor" />
+                  <path
+                    d="M47.8 13.0564C47.8 14.7564 48.8 15.7564 50.6 15.7564H52.6V13.7564H50.9C50.2 13.7564 49.8 13.3564 49.8 12.6564V0.356445H47.8V13.0564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M28.9 20.0564C28 18.9564 26.7 18.2564 25 18.2564C21.9 18.2564 19.6 20.5564 19.6 23.8564C19.6 27.1564 21.9 29.4564 25 29.4564C26.8 29.4564 28 28.6564 28.8 27.5564H28.9V29.1564H30.9V18.5564H28.9V20.0564ZM25.3 27.4564C23.1 27.4564 21.7 25.8564 21.7 23.8564C21.7 21.8564 23.1 20.2564 25.3 20.2564C27.5 20.2564 28.9 21.8564 28.9 23.8564C28.9 25.7564 27.5 27.4564 25.3 27.4564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M44.2 22.3564C43.7 19.9564 41.6 18.2564 38.8 18.2564C35.4 18.2564 33.2 20.7564 33.2 23.8564C33.2 26.9564 35.4 29.4564 38.8 29.4564C41.6 29.4564 43.7 27.6564 44.2 25.2564H42.1C41.7 26.5564 40.4 27.5564 38.8 27.5564C36.6 27.5564 35.2 25.9564 35.2 23.9564C35.2 21.9564 36.6 20.3564 38.8 20.3564C40.4 20.3564 41.6 21.3564 42.1 22.5564H44.2V22.3564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M55.1 20.0564C54.2 18.9564 52.9 18.2564 51.2 18.2564C48.1 18.2564 45.8 20.5564 45.8 23.8564C45.8 27.1564 48.1 29.4564 51.2 29.4564C53 29.4564 54.2 28.6564 55 27.5564H55.1V29.1564H57.1V18.5564H55.1V20.0564ZM51.5 27.4564C49.3 27.4564 47.9 25.8564 47.9 23.8564C47.9 21.8564 49.3 20.2564 51.5 20.2564C53.7 20.2564 55.1 21.8564 55.1 23.8564C55.1 25.7564 53.6 27.4564 51.5 27.4564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M68.7 20.1564C67.8 19.0564 66.5 18.2564 64.8 18.2564C61.7 18.2564 59.4 20.5564 59.4 23.8564C59.4 27.1564 61.6 29.4564 64.8 29.4564C66.5 29.4564 67.8 28.6564 68.6 27.6564H68.7V29.1564H70.7V13.7564H68.7V20.1564ZM65.1 27.4564C62.9 27.4564 61.5 25.8564 61.5 23.8564C61.5 21.8564 62.9 20.2564 65.1 20.2564C67.3 20.2564 68.7 21.8564 68.7 23.8564C68.6 25.8564 67.2 27.4564 65.1 27.4564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M78.3 18.2564C75 18.2564 72.8 20.7564 72.8 23.8564C72.8 26.8564 74.9 29.4564 78.3 29.4564C80.8 29.4564 82.8 28.1564 83.5 25.8564H81.4C80.9 26.8564 79.8 27.4564 78.4 27.4564C76.5 27.4564 75.1 26.1564 75 24.5564H83.8C84 20.9564 81.8 18.2564 78.3 18.2564ZM78.3 20.1564C80 20.1564 81.3 21.1564 81.6 22.7564H75.1C75.4 21.2564 76.6 20.1564 78.3 20.1564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M98.2 18.2564C96.6 18.2564 95.3 19.0564 94.6 20.2564H94.5C93.9 19.0564 92.7 18.2564 91.1 18.2564C89.7 18.2564 88.6 18.9564 88 20.0564V18.5564H86.1V29.1564H88.1V23.7564C88.1 21.7564 89.1 20.3564 90.7 20.2564C92.2 20.2564 93.1 21.2564 93.1 22.8564V29.1564H95.1V23.5564C95.1 21.1564 96.5 20.2564 97.7 20.2564C99.2 20.2564 100.1 21.2564 100.1 22.8564V29.1564H102.1V22.6564C102.2 20.0564 100.7 18.2564 98.2 18.2564Z"
+                    fill="currentColor" />
+                  <path
+                    d="M109.4 27.3564L105.8 18.4564H103.6L108.4 30.0564C108.1 30.9564 107.7 31.2564 106.7 31.2564H104.2V33.2564H106.7C108.5 33.2564 109.5 32.4564 110.2 30.6564L114.9 18.4564H112.8L109.4 27.3564Z"
+                    fill="currentColor" />
+                </g>
+                <defs>
+                  <clipPath id="clip0_33515_1190">
+                    <rect width="115" height="33" fill="white" transform="translate(0 0.356445)" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+          </div>
         </section>
       </footer>
     </div>
@@ -229,19 +233,23 @@
       <section class="modal-window">
         <button type="button" class="modal-close-button">
           <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479 1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982 14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z" fill="currentColor"/>
-            </svg>
+            <path
+              d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479 1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982 14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z"
+              fill="currentColor" />
+          </svg>
         </button>
         <h2 class="modal-head">Поиск гостиницы в Седоне</h2>
         <form action="https://echo.htmlacademy.ru/" method="post" class="modal-form">
           <label for="arrival-date" class="modal-text">Дата заезда:</label>
           <div class="data-wrapper">
-            <input type="text" id="arrival-date" class="data-input" name="reserv-arrival-date" value="27 апреля 2020" placeholder="Укажите дату">
+            <input type="text" id="arrival-date" class="data-input" name="reserv-arrival-date" value="27 апреля 2020"
+              placeholder="Укажите дату">
             <span class="submit-text error-text">Мы не можем отправить вас в прошлое.</span>
           </div>
           <label for="departure-date" class="modal-text">Дата выезда:</label>
           <div class="data-wrapper">
-            <input type="text" id="departure-date" class="data-input" name="reserv-departure-date" value="1 сентября 2023" placeholder="Укажите дату">
+            <input type="text" id="departure-date" class="data-input" name="reserv-departure-date"
+              value="1 сентября 2023" placeholder="Укажите дату">
             <span class="submit-text">На эти даты есть свободные номера. Пока есть.</span>
           </div>
           <label for="adults" class="modal-text">Взрослые:</label>
@@ -251,7 +259,7 @@
                 <span class="visually-hidden">Уменьшить</span>
                 <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 0L0 2L14 2V0L0 0Z" fill="currentColor" />
-                  </svg>
+                </svg>
               </button>
             </div>
             <input type="text" id="adults" class="number-input" name="number-of-adults" value="2">
@@ -260,7 +268,7 @@
                 <span class="visually-hidden">Увеличить</span>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="currentColor" />
-                  </svg>
+                </svg>
               </button>
             </div>
           </div>
@@ -268,7 +276,8 @@
             <label for="children" class="modal-text child-label">Дети:</label>
             <button class="child-info" type="button">
               <span class="visually-hidden">Информация о размещении детей</span>
-            <span class="child-info-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+              <span class="child-info-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                лет. Дети до 6 лет размещаются бесплатно.</span>
             </button>
           </div>
           <div class="number-wrapper child-number">
@@ -277,7 +286,7 @@
                 <span class="visually-hidden">Уменьшить</span>
                 <svg width="14" height="2" viewBox="0 0 14 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 0L0 2L14 2V0L0 0Z" fill="currentColor" />
-                  </svg>
+                </svg>
               </button>
             </div>
             <input type="text" id="children" class="number-input" name="number-of-children" value="2">
@@ -286,7 +295,7 @@
                 <span class="visually-hidden">Увеличить</span>
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" fill="currentColor" />
-                  </svg>
+                </svg>
               </button>
             </div>
           </div>
