Размеры изображения в разметке

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1 class="visually-hidden">Неофициальный сайт города Седоны</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Приглашение посетить Седону</h2>
-          <img src="./img/welcome.svg" class="welcome-img"
+          <img src="./img/welcome.svg" width="458" height="352" class="welcome-img"
             alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
         </section>
         <section class="advantages">
